--- a/app/src/main/res/layout/activity_military_world.xml
+++ b/app/src/main/res/layout/activity_military_world.xml
@@ -8,12 +8,12 @@
     android:orientation="vertical"
     tools:context="com.soldiersoul.wutu.military.MilitaryWorldActivity">
 
-    <com.soldiersoul.wutu.views.TopBar
-        android:id="@+id/activity_military_world_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="50dp">
+    <!--<com.soldiersoul.wutu.views.TopBar-->
+        <!--android:id="@+id/activity_military_world_toolbar"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="50dp">-->
 
-    </com.soldiersoul.wutu.views.TopBar>
+    <!--</com.soldiersoul.wutu.views.TopBar>-->
 
     <LinearLayout
         android:layout_width="match_parent"
