--- a/app/src/main/res/layout/fragment_society.xml
+++ b/app/src/main/res/layout/fragment_society.xml
@@ -1,158 +1,167 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:addStatesFromChildren="true"
-              android:orientation="vertical"
-              tools:context="com.soldiersoul.wutu.society.SocietyFragment">
+<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--xmlns:tools="http://schemas.android.com/tools"-->
+<!--android:layout_width="match_parent"-->
+<!--android:layout_height="match_parent"-->
+<!--android:addStatesFromChildren="true"-->
+<!--android:orientation="vertical"-->
+<!--tools:context="com.soldiersoul.wutu.society.SocietyFragment">-->
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/colorPrimary">
+<!--<RelativeLayout-->
+<!--android:layout_width="match_parent"-->
+<!--android:layout_height="?attr/actionBarSize"-->
+<!--android:background="@color/colorPrimary">-->
 
-        <TextView
-            style="@style/Base.TextAppearance.AppCompat.Title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="@string/society_name"
-            android:textColor="@color/colorWhite"/>
+<!--<TextView-->
+<!--style="@style/Base.TextAppearance.AppCompat.Title"-->
+<!--android:layout_width="wrap_content"-->
+<!--android:layout_height="wrap_content"-->
+<!--android:layout_centerInParent="true"-->
+<!--android:text="@string/society_name"-->
+<!--android:textColor="@color/colorWhite"/>-->
 
-        <ImageView
-            android:id="@+id/logo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="16dp"
-            android:background="@null"
-            android:src="@mipmap/ic_launcher"/>
-    </RelativeLayout>
+<!--<ImageView-->
+<!--android:id="@+id/logo"-->
+<!--android:layout_width="wrap_content"-->
+<!--android:layout_height="wrap_content"-->
+<!--android:layout_alignParentRight="true"-->
+<!--android:layout_centerVertical="true"-->
+<!--android:layout_marginRight="16dp"-->
+<!--android:background="@null"-->
+<!--android:src="@mipmap/ic_launcher"/>-->
+<!--</RelativeLayout>-->
 
-    <LinearLayout
-        android:id="@+id/rlLocation"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:addStatesFromChildren="true"
-        android:background="@drawable/society_location_selector"
-        android:gravity="center"
-        android:padding="8dp">
+<!--<LinearLayout-->
+<!--android:id="@+id/rlLocation"-->
+<!--android:layout_width="match_parent"-->
+<!--android:layout_height="wrap_content"-->
+<!--android:addStatesFromChildren="true"-->
+<!--android:background="@drawable/society_location_selector"-->
+<!--android:gravity="center"-->
+<!--android:padding="8dp">-->
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_location_small"/>
+<!--<ImageView-->
+<!--android:layout_width="wrap_content"-->
+<!--android:layout_height="wrap_content"-->
+<!--android:src="@drawable/ic_location_small"/>-->
 
-        <com.soldiersoul.wutu.views.MarqueeTextView
-            android:id="@+id/tvLocation"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:ellipsize="marquee"
-            android:focusable="true"
-            android:singleLine="true"
-            android:focusableInTouchMode="true"
-            android:lines="1"
-            android:marqueeRepeatLimit="marquee_forever"
-            android:scrollHorizontally="true"
-            android:text="@string/society_textLocation"/>
+<!--<com.soldiersoul.wutu.views.MarqueeTextView-->
+<!--android:id="@+id/tvLocation"-->
+<!--android:layout_width="200dp"-->
+<!--android:layout_height="wrap_content"-->
+<!--android:ellipsize="marquee"-->
+<!--android:focusable="true"-->
+<!--android:singleLine="true"-->
+<!--android:focusableInTouchMode="true"-->
+<!--android:lines="1"-->
+<!--android:marqueeRepeatLimit="marquee_forever"-->
+<!--android:scrollHorizontally="true"-->
+<!--android:text="@string/society_textLocation"/>-->
 
-    </LinearLayout>
+<!--</LinearLayout>-->
 
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/srl"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+<!--<android.support.v4.widget.SwipeRefreshLayout-->
+<!--android:id="@+id/srl"-->
+<!--android:layout_width="match_parent"-->
+<!--android:layout_height="match_parent">-->
 
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+<!--<ScrollView-->
+<!--android:layout_width="match_parent"-->
+<!--android:layout_height="wrap_content">-->
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+<!--<LinearLayout-->
+<!--android:layout_width="match_parent"-->
+<!--android:layout_height="wrap_content"-->
+<!--android:orientation="vertical">-->
 
-                <TextView
-                    android:id="@+id/tvActivity"
-                    style="@style/society_tvStyle"
-                    android:layout_width="match_parent"
-                    android:layout_height="126dp"
-                    android:background="@drawable/back1"
-                    android:text="@string/society_Activity"/>
+<!--<TextView-->
+<!--android:id="@+id/tvActivity"-->
+<!--style="@style/society_tvStyle"-->
+<!--android:layout_width="match_parent"-->
+<!--android:layout_height="126dp"-->
+<!--android:background="@drawable/back1"-->
+<!--android:text="@string/society_Activity"/>-->
 
-                <TextView
-                    android:id="@+id/tvHonor"
-                    style="@style/society_tvStyle"
-                    android:layout_width="match_parent"
-                    android:layout_height="120dp"
-                    android:background="@drawable/back2"
-                    android:text="@string/society_hornor"/>
+<!--<TextView-->
+<!--android:id="@+id/tvHonor"-->
+<!--style="@style/society_tvStyle"-->
+<!--android:layout_width="match_parent"-->
+<!--android:layout_height="120dp"-->
+<!--android:background="@drawable/back2"-->
+<!--android:text="@string/society_hornor"/>-->
 
-                <TextView
-                    android:id="@+id/tvPhoto"
-                    style="@style/society_tvStyle"
-                    android:layout_width="match_parent"
-                    android:layout_height="120dp"
-                    android:background="@drawable/back3"
-                    android:text="@string/society_photo"/>
+<!--<TextView-->
+<!--android:id="@+id/tvPhoto"-->
+<!--style="@style/society_tvStyle"-->
+<!--android:layout_width="match_parent"-->
+<!--android:layout_height="120dp"-->
+<!--android:background="@drawable/back3"-->
+<!--android:text="@string/society_photo"/>-->
 
-                <TextView
-                    android:id="@+id/tvMember"
-                    style="@style/society_tvStyle"
-                    android:layout_width="match_parent"
-                    android:layout_height="120dp"
-                    android:background="@drawable/back4"
-                    android:text="@string/society_member"/>
+<!--<TextView-->
+<!--android:id="@+id/tvMember"-->
+<!--style="@style/society_tvStyle"-->
+<!--android:layout_width="match_parent"-->
+<!--android:layout_height="120dp"-->
+<!--android:background="@drawable/back4"-->
+<!--android:text="@string/society_member"/>-->
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+<!--<LinearLayout-->
+<!--android:layout_width="match_parent"-->
+<!--android:layout_height="wrap_content">-->
 
-                    <TextView
-                        android:id="@+id/tvTask"
-                        style="@style/society_tvStyle_small"
-                        android:layout_width="0dp"
-                        android:layout_height="60dp"
-                        android:layout_weight="1"
-                        android:background="@drawable/back5"
-                        android:text="@string/society_Activity"/>
+<!--<TextView-->
+<!--android:id="@+id/tvTask"-->
+<!--style="@style/society_tvStyle_small"-->
+<!--android:layout_width="0dp"-->
+<!--android:layout_height="60dp"-->
+<!--android:layout_weight="1"-->
+<!--android:background="@drawable/back5"-->
+<!--android:text="@string/society_Activity"/>-->
 
-                    <TextView
-                        android:id="@+id/tvTrain"
-                        style="@style/society_tvStyle_small"
-                        android:layout_width="0dp"
-                        android:layout_height="60dp"
-                        android:layout_weight="1"
-                        android:background="@drawable/back6"
-                        android:text="@string/society_train"/>
-                </LinearLayout>
+<!--<TextView-->
+<!--android:id="@+id/tvTrain"-->
+<!--style="@style/society_tvStyle_small"-->
+<!--android:layout_width="0dp"-->
+<!--android:layout_height="60dp"-->
+<!--android:layout_weight="1"-->
+<!--android:background="@drawable/back6"-->
+<!--android:text="@string/society_train"/>-->
+<!--</LinearLayout>-->
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+<!--<LinearLayout-->
+<!--android:layout_width="match_parent"-->
+<!--android:layout_height="wrap_content">-->
 
-                    <TextView
-                        android:id="@+id/tvContribute"
-                        style="@style/society_tvStyle_small"
-                        android:layout_width="0dp"
-                        android:layout_height="60dp"
-                        android:layout_weight="1"
-                        android:background="@drawable/back7"
-                        android:text="@string/society_myContribute"/>
+<!--<TextView-->
+<!--android:id="@+id/tvContribute"-->
+<!--style="@style/society_tvStyle_small"-->
+<!--android:layout_width="0dp"-->
+<!--android:layout_height="60dp"-->
+<!--android:layout_weight="1"-->
+<!--android:background="@drawable/back7"-->
+<!--android:text="@string/society_myContribute"/>-->
 
-                    <TextView
-                        android:id="@+id/tvIntegral"
-                        style="@style/society_tvStyle_small"
-                        android:layout_width="0dp"
-                        android:layout_height="60dp"
-                        android:layout_weight="1"
-                        android:background="@drawable/back8"
-                        android:text="@string/society_integral"/>
-                </LinearLayout>
+<!--<TextView-->
+<!--android:id="@+id/tvIntegral"-->
+<!--style="@style/society_tvStyle_small"-->
+<!--android:layout_width="0dp"-->
+<!--android:layout_height="60dp"-->
+<!--android:layout_weight="1"-->
+<!--android:background="@drawable/back8"-->
+<!--android:text="@string/society_integral"/>-->
+<!--</LinearLayout>-->
 
-            </LinearLayout>
-        </ScrollView>
+<!--</LinearLayout>-->
+<!--</ScrollView>-->
 
-    </android.support.v4.widget.SwipeRefreshLayout>
-</LinearLayout>
+<!--</android.support.v4.widget.SwipeRefreshLayout>-->
+<!--</LinearLayout>-->
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <include layout="@layout/scrolltab_society_world"/>
+
+
+</RelativeLayout>
